--- a/rebar.config
+++ b/rebar.config
@@ -4,5 +4,6 @@
 
 {deps, [
   {bitfield, ".*", {git,"https://github.com/CamShaft/bitfield.erl.git","master"}},
-  {simple_secrets, ".*", {git,"https://github.com/CamShaft/simple_secrets.erl.git","master"}}
+  {simple_secrets, ".*", {git,"https://github.com/CamShaft/simple_secrets.erl.git","master"}},
+  {fast_key, ".*", {git, "https://github.com/CamShaft/fast_key.git"}}
 ]}.
